Adding CSS styles to the page and importing Alice Font

--- a/style.css
+++ b/style.css
@@ -1,3 +1,27 @@
+body {
+  background-image: url(./assets/bg-image.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+#page {
+  box-sizing: border-box;
+
+  width: 800px;
+  border-radius: 24px;
+  background-color: #F0E8C2;
+
+  margin: 48px auto 28px;
+  padding: 24px;
+}
+
 #page main img {
   border-radius: 16px;
+}
+
+footer p {
+  margin-bottom: 48px;
+
+  color: #F0E8C2;
+  text-align: center;
 }
